--- a/extra-06-2.html
+++ b/extra-06-2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tests</title>
+    <title>extra-06-2</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -11,31 +11,72 @@
     <main id="container">
       <div class="row">
         <div class="row__cont">
-          <div><b>1. Дать форму аблятива.</b></div>
+          <div><b>Дать форму аблятива.</b></div>
           <div><br></div>
-          <div>puella → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>cibus → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>fēminae → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>puerī → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puell<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cib<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fēmin<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puer<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>ager → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>amīcus → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>cēna → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>casae → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>amīc<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cēn<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cas<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vīn<b>um </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div><br></div>
         </div>
       </div>
       <div class="row">
         <div class="row__cont">
-          <div><b>2. Дать форму аккузатива.</b></div>
+          <div><b>Дать форму аккузатива.</b></div>
           <div><br></div>
-          <div>urna → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>amīcae → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>dēnāriī → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>taberna → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>fīcus → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>calathī → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>urn<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>amīc<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>dēnāri<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>tabern<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fīc<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>calath<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>vir → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>forum → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>for<b>um</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>sacc<b>ī </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>Дать форму генетива.</b></div>
+          <div><br></div>
+          <div>mēns<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>loc<b>us </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>colloqui<b>um </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fābul<b>a </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puer<b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>hort<b>us </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>olīv<b>a</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ager<b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vi<b>a</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>Определить спряжение, прописать инфинитив и все личные формы.</b></div>
+          <div><br></div>
+          <div><i>Exemplum:</i><span style="white-space: pre;">	</span>vetat <div class="area" spellcheck="false" contenteditable="true">1</div> <div class="area" spellcheck="false" contenteditable="true">vet<b>ā</b>re</div> <div class="area" spellcheck="false" contenteditable="true">vet<b>ō</b>, vetā<b>s</b>, ~; vetā<b>mus</b>, vetā<b>tis</b>, veta<b>nt</b></div></div>
+          <div><br></div>
+          <div>verrō <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ūnīmus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ēlūdit <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>metuitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>premis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>videt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>arceō <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>rotant <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ferītis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>tegitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>lacrimās <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>gerimus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>polīs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>iaciunt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         </div>
       </div>
     </main>
