--- a/extra-02.html
+++ b/extra-02.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tests</title>
+    <title>extra-02</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -11,41 +11,83 @@
     <main id="container">
       <div class="row">
         <div class="row__cont">
-          <div><b>1. Проанализировать форму слов, дать словарную запись.</b></div>
+          <div><b>1. Дать форму аблятива.</b></div>
           <div><br></div>
-          <div><i>Exemplum:<span style="white-space:pre">	</span></i>amīc<b>am</b> <div class="area" spellcheck="false" contenteditable="true">amīc<b>a</b> -<b>ae</b> <i>f</i></div> <div class="area" spellcheck="false" contenteditable="true">acc sg</div></div>
-          <div><span style="white-space: pre;">			</span>amīc<b>am</b> vēr<b>am</b> <div class="area" spellcheck="false" contenteditable="true">amīc<b>a</b> -<b>ae</b> <i>f</i></div> <div class="area" spellcheck="false" contenteditable="true">vēr<b>us</b> -<b>a</b> -<b>um</b></div> <div class="area" spellcheck="false" contenteditable="true"><i>f</i>, acc sg</div></div>
-          <div><br></div>
-          <div>port<b>ā</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>litter<b>a</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>vi<b>ae</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>Crēt<b>am</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>Itali<b>ā</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>Eurōp<b>ae</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>Arabi<b>a</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>prōvinci<b>am</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>syllab<b>ā</b> long<b>ā </b><div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>īnsul<b>am</b> magn<b>am</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>famili<b>a</b> Rōmān<b>a </b><div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>Rōm<b>ae</b> antīqu<b>ae</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puell<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cib<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fēmin<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puer<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ager → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>amīc<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cēn<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cas<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vīn<b>um </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div><br></div>
         </div>
       </div>
       <div class="row">
         <div class="row__cont">
-          <div><b>2. Дать личную форму 3-го л. ед. ч. от инфинитива — или наоборот.</b></div>
+          <div><b>2. Дать форму аккузатива.</b></div>
           <div><br></div>
-          <div><i>Exemplum:<span style="white-space: pre;">	</span></i>vocā<b>re</b> → <div class="area" spellcheck="false" contenteditable="true">voca<b>t</b></div></div>
-          <div><span style="white-space: pre;">			</span>porta<b>t</b> ← <div class="area" spellcheck="false" contenteditable="true">portā<b>re</b></div></div>
+          <div>urn<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>amīc<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>dēnāri<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>tabern<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fīc<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>calath<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vir → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>for<b>um</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>sacc<b>ī </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div><br></div>
-          <div>labōra<b>t</b> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>intra<b>t</b> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>cessā<b>re</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>ambula<b>t</b> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>iuvā<b>re</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>parā<b>re</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>cēna<b>t</b> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>spectā<b>re</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>Дать форму генетива.</b></div>
+          <div><br></div>
+          <div>mēns<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vi<b>ae </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>colloqui<b>um </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fābul<b>a </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puer<b>ī </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>hort<b>us </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>olīv<b>ae</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>loc<b>ī</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>olīv<b>a</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>Дать форму дательного падежа.</b></div>
+          <div><br></div>
+          <div>Quīnt<b>us </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>Horāti<b>a </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fēmin<b>ae </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>colōn<b>ī </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>bell<b>um </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>for<b>a</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>lān<b>a </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>amīc<b>ī</b><b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vir<b> </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>Дать личную форму 3-го л. ед. и мн. ч. действительного и страдательного залога от инфинитива. Определить спряжение.</b></div>
+          <div><br></div>
+          <div><i>Exemplum:<span style="white-space: pre;">	</span></i>puls<b>ā</b>re → <div class="area" spellcheck="false" contenteditable="true">1</div> <div class="area" spellcheck="false" contenteditable="true">pulsa<b>t</b></div> <div class="area" spellcheck="false" contenteditable="true">pulsa<b>nt</b></div> / <div class="area" spellcheck="false" contenteditable="true">pulsā<b>tur</b></div> <div class="area" spellcheck="false" contenteditable="true">pulsa<b>ntur</b></div></div>
+          <div><br></div>
+          <div>lūd<b>e</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ēlūd<b>e</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>torr<b>ē</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mōnstr<b>ā</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fer<b>ī</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>iac<b>e</b>re→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>arc<b>ē</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ūn<b>ī</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>pūrg<b>ā</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> / <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         </div>
       </div>
     </main>
