--- a/capit-01.html
+++ b/capit-01.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tests</title>
+    <title>capit-01</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
   </head>
