--- a/ultra-01.html
+++ b/ultra-01.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>extra-01</title>
+    <title>ultra-01</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
   </head>
