--- a/ultra-07.html
+++ b/ultra-07.html
@@ -43,7 +43,7 @@
       </div>
       <div class="row">
         <div class="row__cont">
-          <div><b>Дать форму генетива.</b></div>
+          <div><b>3. Дать форму генетива.</b></div>
           <div><br></div>
           <div>mēns<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>vi<b>ae </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
@@ -59,7 +59,7 @@
       </div>
       <div class="row">
         <div class="row__cont">
-          <div><b>Дать форму дательного падежа.</b></div>
+          <div><b>4. Дать форму дательного падежа.</b></div>
           <div><br></div>
           <div>Quīnt<b>us </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>Horāti<b>a </b>→ <div class="area" spellcheck="false" contenteditable="true"></div></div>
@@ -75,7 +75,7 @@
       </div>
       <div class="row">
         <div class="row__cont">
-          <div><b>Дать личную форму 3-го л. ед. и мн. ч. действительного и страдательного залога от инфинитива. Определить спряжение.</b></div>
+          <div><b>5. Дать личную форму 3-го л. ед. и мн. ч. действительного и страдательного залога от инфинитива. Определить спряжение.</b></div>
           <div><br></div>
           <div><i>Exemplum:<span style="white-space: pre;">	</span></i>puls<b>ā</b>re → <div class="area" spellcheck="false" contenteditable="true">1</div> <div class="area" spellcheck="false" contenteditable="true">pulsa<b>t</b></div> <div class="area" spellcheck="false" contenteditable="true">pulsa<b>nt</b></div> / <div class="area" spellcheck="false" contenteditable="true">pulsā<b>tur</b></div> <div class="area" spellcheck="false" contenteditable="true">pulsa<b>ntur</b></div></div>
           <div><br></div>
