--- a/ultra-06.html
+++ b/ultra-06.html
@@ -11,7 +11,7 @@
     <main id="container">
       <div class="row">
         <div class="row__cont">
-          <div><b>1. Определить род, падеж и число, дать словарную запись для каждого слова</b></div>
+          <div><b>1. Определить род, падеж и число, дать словарную запись для каждого слова.</b></div>
           <div><br></div>
           <div><i>Exemplum:<span style="white-space:pre">	</span></i>ling<b>am</b> Latīn<b>am</b> <div class="area" spellcheck="false" contenteditable="true">ling<b>a</b> -<b>ae</b> <i>f</i></div> <div class="area" spellcheck="false" contenteditable="true">Latīn<b>us</b> -<b>a</b> -<b>um</b></div> <div class="area" spellcheck="false" contenteditable="true"><i>f</i>, acc sg</div></div>
           <div><br></div>
