--- a/cap-010.html
+++ b/cap-010.html
@@ -3,18 +3,66 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cap-010</title>
+    <title>cap-10</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main id="container"><div class="row">
-        <div class="row__cont"><b>1. Дать формы генетива, аккузатив, аблятива.</b><br><br>puer fort<b>is</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>mult<b>a</b> sax<b>a</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>puell<b>ae</b> trīst<b>ēs</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>magn<b>um</b> perīul<b>um</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>silv<b>ae</b> ingent<b>ēs</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>nāv<b>is</b> celer&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>alt<b>us</b> mōns&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>omni<b>a</b> verb<b>a</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br><br></div>
-      </div><div class="row">
-        <div class="row__cont"><div><b>2. Определить и перевести данные глагольные формы.</b></div><div><br></div><div><i>Exemplum:</i><span style="white-space:pre">	</span>pugnāte <div class="area" spellcheck="false" contenteditable="true">imper pl</div> <div class="area" spellcheck="false" contenteditable="true"><i>сражайтесь</i></div></div><div><br></div><div>mittit <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>mittite&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>mittere&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>mittō&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>mittunt&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div><br></div><div>facere&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>faciunt&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>facite&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>facitis&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>faciō&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div><br></div><div>redeunt&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>redit&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>redī&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>redīmus&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>redīre&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div><br></div></div>
-      </div><div class="row">
-        <div class="row__cont"><b>3. Перевести на латинский.</b><br><br>1. Наконец троянцы прибывают на Сицилию и отдыхают на берегу. <div class="area" spellcheck="false" contenteditable="true"></div><br>2. Но они в большой опасности: гора Этна извергает огромные камни в небо. <div class="area" spellcheck="false" contenteditable="true"></div><br>3. Вдруг Эней видит Полифема; «Товарищи, — говорит он, — бегите к морю и поднимайтесь на корабли». <div class="area" spellcheck="false" contenteditable="true"></div><br>4. Троянцы слышат слова Энея (<i>gen.</i> <b>Aenēae</b>) и бегут к кораблям. <div class="area" spellcheck="false" contenteditable="true"></div><br>5. Полифем слышит их, но не может увидеть. <div class="area" spellcheck="false" contenteditable="true"></div><br>6. Троянцы в безопасности, ибо они уже плывут в открытом море. <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
-      </div></main>
+    <main id="container">
+      <div class="row">
+        <div class="row__cont">
+          <div><b>1. Дать формы генетива, аккузатив, аблятива.</b></div>
+          <div><br></div>
+          <div>puer fort<b>is</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mult<b>a</b> sax<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>puell<b>ae</b> trīst<b>ēs</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>magn<b>um</b> perīul<b>um</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>silv<b>ae</b> ingent<b>ēs</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nāv<b>is</b> celer → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>alt<b>us</b> mōns → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>omni<b>a</b> verb<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>2. Определить и перевести данные глагольные формы.</b></div>
+          <div><br></div>
+          <div><i>Exemplum:</i><span style="white-space:pre">	</span>pugnāte <div class="area" spellcheck="false" contenteditable="true">imper pl</div> <div class="area" spellcheck="false" contenteditable="true"><i>сражайтесь</i></div></div>
+          <div><br></div>
+          <div>mittit <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mittite <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mittere <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mittō <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mittunt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+          <div>facere <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>faciunt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>facite <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>facitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>faciō <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+          <div>redeunt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>redit <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>redī <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>redīmus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>redīre <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+      </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>3. Перевести на латинский.</b></div>
+          <div><br></div>
+          <div>1. Наконец троянцы прибывают на Сицилию и отдыхают на берегу. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>2. Но они в большой опасности: гора Этна извергает огромные камни в небо. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>3. Вдруг Эней видит Полифема; «Товарищи, — говорит он, — бегите к морю и поднимайтесь на корабли». <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>4. Троянцы слышат слова Энея (<i>gen.</i> <b>Aenēae</b>) и бегут к кораблям. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>5. Полифем слышит их, но не может увидеть. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>6. Троянцы в безопасности, ибо они уже плывут в открытом море. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
